Artikli, ceniki gap fix on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -669,6 +669,10 @@ footer {
     #contact {
         padding: 7rem 4rem;
     }
+    #ceniki,
+    #artikli {
+        gap: 4rem;
+    }
 }
 
 @media only screen and (max-width: 950px) {
